대분류 파트 pagination 추가 (20.09.01)

--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../static/css/main.css">
     <link rel="stylesheet" type="text/css" href="../static/css/group.css">
+    <link rel="stylesheet" href="../static/css/pagination.css" text="text/css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
@@ -242,58 +243,255 @@
                 <div class="big_room_name">
                     게임
                 </div>
-                <div class="small_room">
-                    <span>
-                        메이플스토리
-                    </span>
-                    <span>
-                        리그오브레전드
-                    </span>
-                    <span>
-                        발로란트
-                    </span>
-                    <span>
+                <div class="small_room_container">
+                    
+                    
+                    <!-- <span class="small_room">
                         어몽어스
                     </span>
-                    <span>
+                    <span class="small_room">
                         서든어택
                     </span>
-                    <span>
+                    <span class="small_room">
                         로스트아크
                     </span>
-                    <span>
+                    <span class="small_room">
                         메이플스토리
                     </span>
-                    <span>
+                    <span class="small_room">
                         리그오브레전드
                     </span>
-                    <span>
+                    <span class="small_room">
                         발로란트
                     </span>
-                    <span>
+                    <span class="small_room">
                         어몽어스
                     </span>
-                    <span>
+                    <span class="small_room">
                         서든어택
                     </span>
-                    <span>
+                    <span class="small_room">
                         로스트아크
                     </span>
+                    <span class="small_room">
+                        메이플스토리
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        발로란트
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        메이플스토리
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        발로란트
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        메이플스토리
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        발로란트
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        메이플스토리
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        발로란트
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        메이플스토리
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        발로란트
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        메이플스토리
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span> -->
                 </div>
+                <div class="small_room_page" id="pagination"></div>
             </div>
             <div class="big_room">
                 <div class="big_room_name">
                     스포츠
                 </div>
-                <div class="small_room">
-
+                <div class="small_room_container">
+                    <span class="small_room">
+                        메이플스토리
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        발로란트
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        메이플스토리
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        발로란트
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        발로란트
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
+                    <span class="small_room">
+                        메이플스토리
+                    </span>
+                    <span class="small_room">
+                        리그오브레전드
+                    </span>
+                    <span class="small_room">
+                        발로란트
+                    </span>
+                    <span class="small_room">
+                        어몽어스
+                    </span>
+                    <span class="small_room">
+                        서든어택
+                    </span>
+                    <span class="small_room">
+                        로스트아크
+                    </span>
                 </div>
             </div>
             <div class="big_room">
                 <div class="big_room_name">
                     연예 / 방송
                 </div>
-                <div class="small_room">
+                <div class="small_room_container">
 
                 </div>
             </div>
@@ -301,7 +499,7 @@
                 <div class="big_room_name">
                     IT / 교육
                 </div>
-                <div class="small_room">
+                <div class="small_room_container">
 
                 </div>
             </div>
@@ -309,7 +507,7 @@
                 <div class="big_room_name">
                     여행 / 음식
                 </div>
-                <div class="small_room">
+                <div class="small_room_container">
 
                 </div>
             </div>
@@ -317,12 +515,16 @@
                 <div class="big_room_name">
                     취미 / 생활
                 </div>
-                <div class="small_room">
+                <div class="small_room_container">
 
                 </div>
             </div>
         </div>
     </div>
+
+    <main>
+        
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
