--- a/TeamProject/static/css/main.css
+++ b/TeamProject/static/css/main.css
@@ -430,15 +430,9 @@ a:active {
 .big_room {
 	padding: 5vh 10vh;
 	width: 70vw;
-	margin: 0 auto;
+	min-height: 40vh;
 	border-radius: 10px;
 	background: #474787;
-	/* display: flex;
-	justify-content: space-around;
-	align-content: space-around;
-	text-align: center;
-	flex-wrap: wrap;
-	flex-direction: column; */
 	text-align: center;
 	color: white;
 	margin-bottom: 10vh;
@@ -447,6 +441,7 @@ a:active {
 	left: 50%;
 	transform: translateX(-50%);
 	transition: .5s all;
+	z-index: 0;
 }
 
 .big_room_name{
@@ -455,16 +450,22 @@ a:active {
 	margin-bottom: 5%;
 }
 
-.small_room{
+.small_room_container{
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(45%, auto));
 	gap: 20px;
+	z-index: 1;
+}
+
+.small_room:hover{
+	color:orange;
+	cursor: pointer;
 }
 
 .active {
 	opacity: 1;
+	z-index: 1;
 }
-
 
 .b_btn {
 	width: 100px;
@@ -493,4 +494,25 @@ a:active {
 .b_btn_img {
 	width: 100px;
 	height: 100px;
+}
+
+.small_room_page{
+	margin-top: 2.5rem;
+}
+
+.pages{
+	margin-right: 1rem;
+	padding: 0.5rem;
+	font-weight: bold;
+	background: #a29bfe;
+	border-radius: 8px;
+
+}
+.pages.active{
+	color: #474787 !important;
+}
+
+.pages:hover{
+	color:orange;
+	cursor: pointer;
 }
