--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -243,281 +243,55 @@
                 <div class="big_room_name">
                     게임
                 </div>
-                <div class="small_room_container">
-                    
-                    
-                    <!-- <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        메이플스토리
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        발로란트
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        메이플스토리
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        발로란트
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        메이플스토리
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        발로란트
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        메이플스토리
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        발로란트
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        메이플스토리
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        발로란트
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        메이플스토리
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        발로란트
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        메이플스토리
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span> -->
-                </div>
+
+                <div class="small_room_container"></div>
+
                 <div class="small_room_page" id="pagination"></div>
             </div>
             <div class="big_room">
                 <div class="big_room_name">
                     스포츠
                 </div>
-                <div class="small_room_container">
-                    <span class="small_room">
-                        메이플스토리
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        발로란트
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        메이플스토리
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        발로란트
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        발로란트
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                    <span class="small_room">
-                        메이플스토리
-                    </span>
-                    <span class="small_room">
-                        리그오브레전드
-                    </span>
-                    <span class="small_room">
-                        발로란트
-                    </span>
-                    <span class="small_room">
-                        어몽어스
-                    </span>
-                    <span class="small_room">
-                        서든어택
-                    </span>
-                    <span class="small_room">
-                        로스트아크
-                    </span>
-                </div>
+
+                <div class="small_room_container"></div>
+
+                <div class="small_room_page" id="pagination"></div>
             </div>
             <div class="big_room">
                 <div class="big_room_name">
                     연예 / 방송
                 </div>
-                <div class="small_room_container">
-
-                </div>
+                
+                <div class="small_room_container"></div>
+                
+                <div class="small_room_page" id="pagination"></div>
             </div>
             <div class="big_room">
                 <div class="big_room_name">
                     IT / 교육
                 </div>
-                <div class="small_room_container">
+                
+                <div class="small_room_container"></div>
 
-                </div>
+                <div class="small_room_page" id="pagination"></div>
             </div>
             <div class="big_room">
                 <div class="big_room_name">
                     여행 / 음식
                 </div>
-                <div class="small_room_container">
 
-                </div>
+                <div class="small_room_container"></div>
+
+                <div class="small_room_page" id="pagination"></div>
             </div>
             <div class="big_room">
                 <div class="big_room_name">
                     취미 / 생활
                 </div>
-                <div class="small_room_container">
+                
+                <div class="small_room_container"></div>
 
-                </div>
+                <div class="small_room_page" id="pagination"></div>
             </div>
         </div>
     </div>
