jwt인증방식변경(20.09.02)-내일 합쳐서 올릴예정
인증방식 변경과 새로 login api 만들고 토큰 방식변경, 날짜 받는것과 오류 정보 수정 및 mysql 연동만 하면 완료

--- a/PROJECT2/templates/login.html
+++ b/PROJECT2/templates/login.html
@@ -12,7 +12,7 @@
     <script>
         function login() {
             $.ajax({
-                url: '/auth',//자동으로 생성된 url
+                url: '/api/v1/login',//자동으로 생성된 url
                 contentType:' application/json',
                 method: 'POST',
                 data: JSON.stringify({
@@ -20,7 +20,7 @@
                     password: $('#password').val()
                 })
             }).done(function (res) {
-                $.cookie('access_token', res.access_token);//결과로 받은 값중 그 안에 있는 access_token값을 access_token에 저장
+                // $.cookie('access_token', res.access_token);//결과로 받은 값중 그 안에 있는 access_token값을 access_token에 저장
                 window.location = '/';
             });
         }
