대분류 transition 작업 (20.09.02)

--- a/TeamProject/static/css/main.css
+++ b/TeamProject/static/css/main.css
@@ -455,6 +455,8 @@ a:active {
 	grid-template-columns: repeat(auto-fill, minmax(45%, auto));
 	gap: 20px;
 	z-index: 1;
+	transition-duration: .5s;
+	transition: .5s all;
 }
 
 .small_room:hover{
