--- a/TeamProject/templates/rooms.html
+++ b/TeamProject/templates/rooms.html
@@ -4,13 +4,11 @@
 	<title>Web Project - YourRoom</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width = device-width , initial-scale=1.0">
-	<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link rel='stylesheet' href="{{ url_for('static', filename='css/style.css') }}">
 	<link rel='stylesheet' href="{{ url_for('static', filename='css/Rooms.css') }}">
 
 </head>
-<body>
+<body onload="init()">
 	<header>
 		<div class="nav_logo">
 			<a href="/rooms">
@@ -45,7 +43,8 @@
 			<div class="side_one"></div>
 			<div class="side_two"></div>
 		</section>
-
+	<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="{{ url_for('static', filename='js/rooms.js') }}"></script>
 </body>
 </html>
