--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -245,7 +245,9 @@
                 </div>
 
                 <div class="small_room_container"></div>
-
+                <div>
+                    test
+                </div>
                 <div class="small_room_page" id="pagination"></div>
             </div>
             <div class="big_room">
