--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -246,7 +246,7 @@
 
                 <div class="small_room_container"></div>
                 <div>
-                    test test2 test3
+                    test test2
                 </div>
                 <div class="small_room_page" id="pagination"></div>
             </div>
