--- a/TeamProject/templates/rooms.html
+++ b/TeamProject/templates/rooms.html
@@ -43,8 +43,12 @@
 			<div class="side_one"></div>
 			<div class="side_two"></div>
 		</section>
+	<div class="app_root">Loading ...</div>
+
 	<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="{{ url_for('static', filename='js/rooms.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post_fetch.js') }}"></script>	
+	<script src="{{ url_for('static', filename='js/post_render.js') }}"></script>		
 </body>
 </html>
