--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -15,7 +15,7 @@
         <div>
             <span class="logo">ROOMS</span>
         </div>
-        <div class="sub-container">
+        <div class="sub_container">
             <span class="main_login">Login</span> |
             <span class="main_signup">Sign up</span>
         </div>
@@ -25,7 +25,7 @@
 
     <div id="signup_container"></div>
 
-    <div class="sub-title">
+    <div class="sub_title">
         베스트 룸
     </div>
 
@@ -90,7 +90,7 @@
     </div>
 
     <!-- 베스트 글 목록 -->
-    <div class="sub-title">
+    <div class="sub_title">
         베스트 글
     </div>
 
@@ -227,7 +227,7 @@
         </div>
     </div>
 
-    <div class="sub-title">
+    <div class="sub_title">
         대분류
     </div>
 
@@ -306,8 +306,7 @@
         AOS.init();
     </script>
     <script src="../static/js/main.js" type="text/javascript"></script>
-    <script src="../static/js/login.js" type="text/javascript"></script>
-    <script src="../static/js/signup.js" type="text/javascript"></script>
+    <script src="../static/js/user_management.js" type="text/javascript"></script>
 
 </body>
 
