--- a/TeamProject/templates/rooms.html
+++ b/TeamProject/templates/rooms.html
@@ -8,7 +8,7 @@
 	<link rel='stylesheet' href="{{ url_for('static', filename='css/Rooms.css') }}">
 
 </head>
-<body onload="init()">
+<body>
 	<header>
 		<div class="nav_logo">
 			<a href="/rooms">
@@ -32,9 +32,9 @@
 				<h1>모임이름 - 게시판</h1>
 			</div>
 			<!-- 게시판글쓰기 -->
-			<div class="Board__input"></div>
+<!-- 			<div class="Board__input"></div> -->
 			<!-- 게시판글목록 -->
-			<div class="Board__lists"></div>
+<!-- 			<div class="Board__lists"></div> -->
 
 		</section>
 
@@ -49,6 +49,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="{{ url_for('static', filename='js/post.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/post_fetch.js') }}"></script>	
-	<script src="{{ url_for('static', filename='js/post_render.js') }}"></script>		
+	<script src="{{ url_for('static', filename='js/post_render.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post_router.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post_event.js') }}"></script>
 </body>
 </html>
