Revert "Merge pull request #10 from Lee-3-8/master"
This reverts commit 7d38ae086b713044dd872656709c41cdfa283a12, reversing
changes made to 3955c096be5ae5dfb89759372ec0967d168c4310.

--- a/TeamProject/static/css/Rooms.css
+++ b/TeamProject/static/css/Rooms.css
@@ -70,10 +70,13 @@
 	width: 90%;
 	margin-top: 10px;
 }
-
 .input__off{
 	width: 100%;
+}
+.input__off textarea{
+	width: 100%;
 	height: 100%;
+	margin-top: 5px;
 	background-color: white;
 	cursor: pointer;
 	border-radius: 5px;
