파일정리 , 오류수정(2020.09.07)
- merge오류수정
- 파일정리 및 파일명 수정

--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width = device-width , initial-scale=1.0">
 	<link rel='stylesheet' href="{{ url_for('static', filename='css/style.css') }}">
-	<link rel='stylesheet' href="{{ url_for('static', filename='css/Rooms.css') }}">
+	<link rel='stylesheet' href="{{ url_for('static', filename='css/post.css') }}">
 
 </head>
 <body>
@@ -42,10 +42,10 @@
 
 	<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="{{ url_for('static', filename='js/post.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/post_fetch.js') }}"></script>	
-	<script src="{{ url_for('static', filename='js/post_render.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/post_router.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/post_event.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post/main.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post/fetch.js') }}"></script>	
+	<script src="{{ url_for('static', filename='js/post/render.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post/router.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post/event.js') }}"></script>
 </body>
 </html>
