--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -296,17 +296,13 @@
         </div>
     </div>
 
-    <main>
-        
-    </main>
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
     <script src="../static/js/main.js" type="text/javascript"></script>
-    <script src="../static/js/user_management.js" type="text/javascript"></script>
+    <script src="../static/js/auth.js" type="text/javascript"></script>
 
 </body>
 
