UI개선,파일정리(2020.09.08)
-UI 개선 , 가운데정렬 ,반응형

--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -27,6 +27,7 @@
 			<p></p>
 		</div>
 	</header>
+	<div class="post_main" >
 		<section class="Board">
 			<div class="Board__title">
 				<h1>모임이름 - 게시판</h1>
@@ -38,7 +39,8 @@
 			<div class="side_one"></div>
 			<div class="side_two"></div>
 		</section>
-	<div class="app_root">Loading ...</div>
+	</div>
+
 
 	<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
