--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -1,17 +1,15 @@
+
 .Board{
 	position: relative;
 	display:flex;
 	flex-direction:column;
 	align-items: center;
-	padding-top: 70px;
 	position: absolute;
 	background: transparent;
 	width: 70%;
-	height: 80%;
-	margin-top: 10px;
+	margin-top: 20px;
 }
 .Board__title{
-	margin-top: 10px;
 	width:90%;
 	height: 50px;
 	background-color: white;
@@ -32,23 +30,32 @@
 	list-style:none;
 }
 .board__lists__item{
-	width: 100%;
+	width: calc( 100% - 20px );
+	height: 90px;
 	background-color: white;
+	padding: 10px;
 	margin-bottom: 10px;
 	cursor: pointer;
 	border-radius: 5px;
 
 }
-.board__lists__item h3{
-	margin-left: 10px;
+.board__lists__item:hover{
+	background-color: lightgray;
+}
+.board__lists__item h4{
+	width: 65%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+
 }
 .board__lists__item hr{
-	margin : 5px;
-	width: 30%;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	width: 65%;
 }
 .board__lists__item p{
-	margin-left: 20px;
-	margin-right: 10px;
+
 	font-color: gray;
 	font-size: 13px;
 	overflow: hidden;
@@ -69,26 +76,22 @@
 .Board__input{
 	width: 90%;
 	margin-top: 10px;
+
 }
 .input__off{
 	width: 100%;
-}
-.input__off textarea{
-	width: 100%;
-	height: 100%;
-	margin-top: 5px;
-	background-color: white;
+	height: 30px;
+	display: flex;
+	align-items: center;
+	background-color: lightgray;
 	cursor: pointer;
 	border-radius: 5px;
-	border: 0px;
 
 }
-textarea::placeholder{
-	text-indent: 10px;
+.input__off p{
+	margin-left: 10px;
 }
-input::placeholder{
-	text-indent: 10px;
-}
+
 .input__on{
 	display: flex;
 	flex-direction: column;
@@ -233,10 +236,9 @@ input::placeholder{
 }
 @media screen and (max-width: 768px) {
 	.Board{
-		width: 90%;
-		top: 50%;
-		left:50%;
-		transform: translate(-50%, -50%);
-		padding-top: 120px;
+		width: 100%;
+	}
+	.post_main{
+		width: 90%
 	}
 }
