--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -12,11 +12,12 @@
 
 
     <div data-aos="zoom-in" data-aos-duration="1000" class="container aos-init aos-animate">
+        <div class="background_layer"></div>
         <div>
             <span class="logo">ROOMS</span>
         </div>
         <div class="sub_container">
-            <span class="main_login">Login</span> |
+            <span class="main_login">Login</span> | 
             <span class="main_signup">Sign up</span>
         </div>
     </div>
