관리자 페이지 다듬기 (20.09.09)

--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -10,24 +10,27 @@
 
     <header>
         <div class="nav_container">
-            <img src="../static/img/m_icon.png" class="icon">
-            <span>ROOM</span>
+            
             <div class="nav_menus">
+                <div class="nav_logo">
+                    <img src="../static/img/m_icon.png" class="nav_logo_icon">
+                    <a href="/" class="nav_logo_name">ROOM</a>
+                </div>
                 <a href="/" class="nav_menu">MAIN</a>
-                <a href="/rooms" class="nav_menu">BOARD</a>
+                <a href="/post" class="nav_menu">BOARD</a>
             </div>
             
         </div>
     </header>
 
-    <div>
-        <div class="board_management_btn">
+    <div class="top_btns">
+        <div class="board_management_btn top_btn">
             게시판 관리
         </div>
-        <div class="report_management_btn">
+        <div class="report_management_btn top_btn">
             신고 리스트 관리
         </div>
-        <div class="user_management_btn">
+        <div class="user_management_btn top_btn">
             회원 관리
         </div>
     </div>
