--- a/TeamProject/static/css/manager.css
+++ b/TeamProject/static/css/manager.css
@@ -1,24 +1,58 @@
 body {
     margin: 0;
 }
+a{color:white}
+a:link {text-decoration: none;}
+a:visited {text-decoration: none;}
+a:active {text-decoration: none;}
 
 .nav_container {
     height: 10vh;
     background-image: linear-gradient(to right, #505285 0%, #585e92 12%, #65689f 25%, #7474b0 37%, #7e7ebb 50%, #8389c7 62%, #9795d4 75%, #a2a1dc 87%, #b5aee4 100%);
     color: white;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 1.5em;
     padding: 0 10%;
     font-family: sans-serif;
 }
 
-.icon{
-    margin: 2vh 1vh 0 0;
+.nav_logo_icon{
     width: 6vh;
     height: 6vh;
-    vertical-align: bottom;
+}
+.nav_logo_name{
+    vertical-align: super;
 }
 
 .nav_menus{
-    display: inline-flex;
+    height: 10vh;
+    display: flex;
+   align-items: center;
+   justify-content: space-around;
+}
+
+.top_btns{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 3vh;
+}
+
+.top_btn{
+    font-weight: bold;
+    width: 25vw;
+    height: 7vh;
+    color:white;
+    background: #b5aee4;
+    border-radius: 4px;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .2s all;
+    cursor: pointer;
+}
+.top_btn:hover{
+    background: #505285;
+    
 }
