--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -28,10 +28,11 @@
 		</div>
 	</header>
 	<div class="post_main" >
-		<section class="Board">
-			<div class="Board__title">
-				<h1>모임이름 - 게시판</h1>
-			</div>
+		<div class="post_title">
+			<h1>모임이름 - 게시판</h1>
+		</div>
+		<section class="post">
+
 		</section>
 
 		<section class="side">
